--- a/src/app/nav-menu/nav-menu.component.html
+++ b/src/app/nav-menu/nav-menu.component.html
@@ -2,8 +2,8 @@
   <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom mb-3">
 
     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Inventory App</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-            aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
@@ -12,19 +12,19 @@
           <a class="nav-link text-dark" [routerLink]='["/"]'>Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark"  [routerLink]='["/products"]'>Products</a>
+          <a class="nav-link text-dark" [routerLink]='["/products"]'>Products</a>
+        </li>
+        <li class="nav-item" *ngIf="!(loginStatus$ | async) as LoginStatus">
+          <a class="nav-link text-dark" *ngIf="LoginStatus" [routerLink]='["/login"]'>Login</a>
+        </li>
+        <li class="nav-item" *ngIf="!(loginStatus$ | async) as LoginStatus">
+          <a class="nav-link text-dark" *ngIf="LoginStatus" [routerLink]='["/register"]'>Register</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-dark"  [routerLink]='["/login"]'>Login</a>
+          <a class="nav-link text-danger" *ngIf="(userName$ | async) as userName">{{userName | uppercase}}</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link text-dark"  [routerLink]='["/register"]'>Register</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-danger"></a>
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-primary text-white">Logout</a>
+        <li class="nav-item" *ngIf="(loginStatus$ | async) as LoginStatus">
+          <a class="btn btn-primary text-white" *ngIf="LoginStatus" (click)="onLogout()">Logout</a>
         </li>
 
       </ul>
